@@ -1,5 +1,6 @@
 Version 0.71
 	* Use xrange() instead of range()
+	* Use isinstance(x, int) instead of type(x) == types.IntType
 	* Prepare support of Python3 (use integer division: x // y)
 
 Version 0.70 (2009-10-29)
